# FastAPI_Project2

./: .env  main.py  oauth2.py  pyproject.toml
app/: db.py  main.py  models.py  oauth2.py  schemas.py
app/routers/: auth.py  post.py  user.py  vote.py
